--- a/call_of_cthulhu/picture/picture_all.toml
+++ b/call_of_cthulhu/picture/picture_all.toml
@@ -1,7 +1,7 @@
 [meta]
 title = "模组资料(包含图片)"
 author = "3987681449"
-version = "1.0.0"
+version = "1.0.1"
 license = "CC-BY-NC-SA 4.0"
 date = 2025-04-08
 update_date = 2025-04-18
@@ -243,6 +243,7 @@ options = ["[CQ:image,file=https://github.com/errrr-er/alll/blob/main/call_of_ct
 ["BHBW"]
 export = true
 visible = true
+aliases = ["bhbw"]
 options = ["关键词：BHBW事前信息"]
 
 ["BHBW事前信息"]
