--- a/call_of_cthulhu/picture/picture_all.toml
+++ b/call_of_cthulhu/picture/picture_all.toml
@@ -259,4 +259,4 @@ options = ["关键词：警正事前"]
 
 ["警正事前"]
 export = true
-options = ["还没搞但理论上五月份之前应该会有，如果没有请催催催"]
+options = ["▼概要\n规则：克苏鲁神话TRPG6版\n舞台：现代日本（可更改）\n时间：1.5-3h\n人数：2-4（可加KPC）\nLOST：有\nHO：共通\n\n★共通HO\n你们被他人视（或视他人）为竞争对手。\n\n※模组中有以怪锤vol.2为参考的原创神话生物登场（不擅长的话请小心）\f▼关于模组\n警察探索者正常开展搜查的模组。\n但因NPC的原因恐怕会变成搞笑风。\n\n▼事前信息\n探索者们居住的市町村发生了一系列失踪事件。\n引人注目的是失踪者主要为上层人士（富人）。\f▼对手班\n是探索者的对手，相当优秀。\n如果探索者落后于他们的话，\n就会说“嗯，看来搜查这方面还是我们更擅长”等。\n\n★对手班NPC\n佳成优秀\n竞争对手班的班长，把探索者视为最大的对手。\n一天结束的时，一定会确认探索者的进度，留下一句话后离开。\n印象中，是学生时代当过学生会长的类型（顾名思义很优秀）。"]
