--- a/readme_pic/a.cat_all.toml
+++ b/readme_pic/a.cat_all.toml
@@ -14,7 +14,7 @@ update_Urls = [
 
 ["猫翻译"]
 export = true
-options = ["请确保已阅读最新版兑换须知\n下载链接详见页尾“译本”列自取\nerrrr-er.github.io/trpg/\n\n其余可在提问箱内反馈/咨询\nbox.n3ko.cc/_/no_reply31cat\n\n或可加群联系317223427"]
+options = ["[CQ:image,file=,type=show]"]
 
 
 ["猫discord"]
